# pytoqlik

./: .gitignore  PyToQlik Documentation.md  README.md  setup.cfg
docs/: Documentation.md  PyToQlik Cloud Tutorial.md  documentation.md
src/pytoqlik/: __init__.py  module.py
src/pytoqlik.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
