[metadata]
name = pytoqlik
version = 0.0.1
author = Angelo Baruffi Nogueira
author_email = angelo.baruffi@bixtecnologia.com.br
description = This lib allows you to integrate qlik with jupyter notebook.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bixtecnologia/pytoqlik
project_urls =
    Bug Tracker = https://github.com/bixtecnologia/pytoqlik/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src